@@ -9,6 +9,9 @@ version 0.9.2 - Not released, available at https://simupop.svn.sourceforge.net/s
   - NEW: Allow the use of single form parameter in population::removeSubPops,
 		removeIndividuals, addLoci, removeLoci and resize.
   - BUG: Fix a bug in adding locus to a population without any locus.
+  - NEW: Alow the use of single form parameter in controlledOffspringGenerator.
+		Handle single return value of allele frequency trajectory function.
+		
 
 version 0.9.1 - (Rev 2330) Jan 13, 2009
   - NEW: Improve allele iterator so that stat(alleleFreq) can handle chromosome x and y.
